--- a/app/templates/char-screen.hbs
+++ b/app/templates/char-screen.hbs
@@ -1,14 +1,21 @@
 <h1 class='choose-char'>Choose Your Character!</h1>
 <div class="row">
   <div class="character-image-list">
-    <div class="hover"><img class="ron" src="images/ron-burgundy.jpg" alt=""/>
-      <span class='ron name'>Ron Burgundy</span></div>
+
+    {{#each newsChannel4}}
+      <div class="hover character">
+        <img class="ron" src="{{picture}}" alt=""/>
+        <span class='ron name'>{{name}}</span>
+      </div>
+    {{/each}}
+      <!--
     <div class="hover"><img class="champ" src="images/champ-kind.jpg" alt=""/>
       <span class='champ name'>Champ Kind</span></div>
     <div class="hover"><img class="brian" src="images/brian-fantana.jpg" alt=""/>
       <span class='brian name'>Brian Fantana</span></div>
     <div class="hover"><img class="brick" src="images/brick-tamland.jpg" alt=""/>
-      <span class='brick name'>Brick Tamland</span></div>
+      <span class='brick name'>Brick Tamland</span></div> -->
+
   </div>
 </div>
 <div class="fight"><button class="btn btn-default btn-lg" type="button" name="button">Fight!</button></div>
