added data attribute to char template

--- a/app/templates/char-screen.hbs
+++ b/app/templates/char-screen.hbs
@@ -3,7 +3,7 @@
   <div class="character-image-list">
 
     {{#each newsChannel4}}
-      <div class="hover character">
+      <div class="hover character" data-char-name="{{name}}">
         <img class="ron" src="{{picture}}" alt=""/>
         <span class='ron name'>{{name}}</span>
       </div>
