setting up fight screen template

--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -5,7 +5,7 @@
     <div class="col-sm-6">
       <div class="good-guy">
         <div class="">
-          <img src="" alt="" />
+          <img src="images/ron-burgundy.jpg" alt="" />
           <p class='good-name'>name</p>
           <p class='good-health'>health</p>
           <button type="button" name="button" class='btn btn-default btn-lg attack-button'>Attack</button>
@@ -16,7 +16,7 @@
     <div class="col-sm-6">
       <div class="bad-guy">
         <div class="">
-          <img src="" alt="" />
+          <img src="images/wes-mantooth.jpg" alt="" />
           <p class='bad-name'>name</p>
           <p class='bad-health'>health</p>
         </div>
@@ -28,7 +28,8 @@
   <div class="col-sm-6">
     <div class="row">
       <div class="message-board">
-
+        <p>ron hit for 30 points</p>
+        <p>you win</p>
       </div>
     </div>
   </div>
