--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -106,3 +106,10 @@ body{
   text-align: center;
 
 }
+
+//fight screen
+.message-board{
+  width: 100%;
+  height: 200px;
+  border: 1px solid white;
+}
