added more villain characters and images

--- a/app/templates/char-screen.hbs
+++ b/app/templates/char-screen.hbs
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="character-image-list">
 
-    {{#each newsChannel4}}
+    {{#each characters}}
       <div class="hover character" data-char-name="{{name}}">
         <img class="ron" src="{{picture}}" alt=""/>
         <span class='ron name'>{{name}}</span>
