minor template changes

--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -6,7 +6,7 @@
       <div class="good-guy">
         <div class="">
           <img src="{{picture}}" alt="" />
-          <p class='good-name'>{{chosenChar.name}}</p>
+          <p class='good-name'>{{name}}</p>
           <p class='good-health'>{{health}}</p>
           <button type="button" name="button" class='btn btn-default btn-lg attack-button'>Attack</button>
         </div>
