--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -104,12 +104,33 @@ body{
 .fight{
   margin-top: 70px;
   text-align: center;
-
 }
-
-//fight screen
-.message-board{
-  width: 100%;
-  height: 200px;
+.selected{
   border: 1px solid white;
+  border-radius: 6px;
+}
+//fight screen
+.battle-screen{
+  p{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+  }
+  .message-board{
+    width: 100%;
+    height: 200px;
+    border: 1px solid white;
+  }
+  .fighter-img{
+    width: 200px;
+    height: 200px;
+    border-radius: 3px;
+  }
+  .bad{
+    text-align: right;
+  }
+  .attack-button{
+    font-size: 27px;
+    font-weight: normal;
+  }
 }
