--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -1,37 +1,39 @@
-<h1>Fight!</h1>
-<div class="col-sm-12">
-  <div class="row">
 
-    <div class="col-sm-6">
-      <div class="good-guy">
-        <div class="">
-          <img src="{{picture}}" alt="" />
-          <p class='good-name'>{{name}}</p>
-          <p class='good-health'>{{health}}</p>
-          <button type="button" name="button" class='btn btn-default btn-lg attack-button'>Attack</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-6">
-      <div class="bad-guy">
-        <div class="">
-          <img src="images/wes-mantooth.jpg" alt=""/>
-          <p class='bad-name'>{{enemyCharList.name}}</p>
-          <p class='bad-health'>health</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="col-sm-6">
+<div class="battle-screen">
+  <h1>Fight!</h1>
+  <div class="col-sm-12">
     <div class="row">
-      <div class="message-board">
-        <p>ron hit for 30 points</p>
-        <p>you win</p>
+
+      <div class="col-sm-6">
+        <div class="good-guy">
+          <div class="">
+            <img class='fighter-img' src="{{picture}}" alt="" />
+            <p class='good-name'>{{name}}</p>
+            <p class='good-health'>{{health}}</p>
+            <button type="button" name="button" class='btn btn-default btn-lg attack-button'>Attack</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="bad-guy">
+          <div class="bad">
+            <img class='fighter-img' src="images/wes-mantooth.jpg" alt=""/>
+            <p class='bad-name'>name</p>
+            <p class='bad-health'>health</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="col-sm-6">
+      <div class="row">
+        <div class="message-board">
+
+        </div>
       </div>
     </div>
-  </div>
 
+  </div>
 </div>
