--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -8,7 +8,7 @@
           <div class="">
             <img src="{{combatants.0.picture}}" alt="" />
             <p class='good-name'>{{combatants.0.name}}</p>
-            <p class='good-health'>{{combatants.0.health}}</p>
+            <p class='good-health'>HP: {{combatants.0.health}}/100</p>
             <button type="button" name="button" class='btn btn-default btn-lg attack-button'>Attack</button>
           </div>
         </div>
@@ -16,10 +16,10 @@
 
       <div class="col-sm-6">
         <div class="bad-guy">
-          <div class="">
+          <div class="bad">
             <img src="{{combatants.1.picture}}" alt=""/>
             <p class='bad-name'>{{combatants.1.name}}</p>
-            <p class='bad-health'>{{combatants.1.health}}</p>
+            <p class='bad-health'>{{combatants.1.health}}/100</p>
           </div>
         </div>
       </div>
