--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -6,7 +6,7 @@
       <div class="col-sm-6">
         <div class="good-guy">
           <div class="">
-            <img src="{{combatants.0.picture}}" alt="" />
+            <img class='player-image' src="{{combatants.0.picture}}" alt="" />
             <p class='good-name'>{{combatants.0.name}}</p>
             <p class='good-health'>HP: {{combatants.0.health}}/100</p>
             <button type="button" name="button" class='btn btn-default btn-lg attack-button'>Attack</button>
