--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -17,7 +17,7 @@
       <div class="col-sm-6">
         <div class="bad-guy">
           <div class="bad">
-            <img src="{{combatants.1.picture}}" alt=""/>
+            <img class="enemy-image" src="{{combatants.1.picture}}" alt=""/>
             <p class='bad-name'>{{combatants.1.name}}</p>
             <p class='bad-health'>{{combatants.1.health}}/100</p>
           </div>
