added additional end screen, limited the click ability on attack button

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -138,7 +138,10 @@ body{
     margin-bottom: 20px;
   }
   .enemy-image{
-
     background-color: blue;
+  }
+  .message-board{
+    font-size: 25px;
+    color: white;
   }
 }
