--- a/app/templates/start-screen.hbs
+++ b/app/templates/start-screen.hbs
@@ -4,3 +4,4 @@
 <h1 class="title-bottom">Epic Showdown</h1>
 
 <div class="start"><button class="btn btn-default btn-lg" type="button" name="button">START</button></div>
+<!--<audio src="../../media-for-game/anchorman.mp3" autoplay></audio>-->
