styled end screen

--- a/app/templates/char-screen.hbs
+++ b/app/templates/char-screen.hbs
@@ -6,7 +6,7 @@
       <div class="hover character" data-char-name="{{name}}">
         <img class="ron" src="{{picture}}" alt=""/>
         <span class='ron name'>{{name}}</span>
-        <audio class='audio' src="{{audio}}"></audio>
+        <!-- <audio class='audio' src="{{audio}}"></audio> -->
       </div>
     {{/each}}
   </div>
