--- a/app/templates/fight-end-screen.hbs
+++ b/app/templates/fight-end-screen.hbs
@@ -1,1 +1,6 @@
-<h1>You win!</h1>
+
+<div class="won">
+  <h1>You win!</h1>
+  <audio src="../../media-for-game/notimpressed.mp3" autoplay></audio>
+  <img src="images/kind-of-a-big-deal.jpg" alt="" />
+</div>
