--- a/app/templates/fight-end-lose.hbs
+++ b/app/templates/fight-end-lose.hbs
@@ -1,1 +1,5 @@
-<h1>You lost!</h1>
+<div class="lost">
+  <h1>You lost!</h1>
+  <audio src="../../media-for-game/awful.mp3" autoplay></audio>
+  <iframe src="//giphy.com/embed/FSnwQf1mPhN2o" width="480" height="422" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mclaren-car-crashes-f1-FSnwQf1mPhN2o">via GIPHY</a></p>
+</div>
