--- a/app/templates/fight-screen.hbs
+++ b/app/templates/fight-screen.hbs
@@ -2,7 +2,7 @@
   <h1>Fight!</h1>
   <div class="col-sm-12">
     <div class="row">
-
+      <audio src="../../media-for-game/hair.mp3" autoplay></audio>
       <div class="col-sm-6">
         <div class="good-guy">
           <div class="">
