added reset button

--- a/app/templates/fight-end-lose.hbs
+++ b/app/templates/fight-end-lose.hbs
@@ -2,4 +2,5 @@
   <h1>You lost!</h1>
   <audio src="../../media-for-game/awful.mp3" autoplay></audio>
   <iframe src="//giphy.com/embed/FSnwQf1mPhN2o" width="480" height="422" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  <button class='btn-default btn-lg restart' type="submit" name="button">Restart</button>
 </div>
