--- a/app/templates/fight-end-screen.hbs
+++ b/app/templates/fight-end-screen.hbs
@@ -3,4 +3,5 @@
   <h1>You win!</h1>
   <audio src="../../media-for-game/notimpressed.mp3" autoplay></audio>
   <img src="images/kind-of-a-big-deal.jpg" alt="" />
+  <button class='btn-default btn-lg restart' type="submit" name="button">Restart</button>
 </div>
