--- a/app/templates/fight-end-lose.hbs
+++ b/app/templates/fight-end-lose.hbs
@@ -1,6 +1,6 @@
 <div class="lost">
   <h1>You lost!</h1>
-  <audio src="../../media-for-game/awful.mp3" autoplay></audio>
+  <audio src="audio/awful.mp3" autoplay></audio>
   <iframe src="//giphy.com/embed/FSnwQf1mPhN2o" width="480" height="422" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
   <button class='btn-default btn-lg restart' type="submit" name="button">Restart</button>
 </div>
