--- a/app/templates/fight-end-screen.hbs
+++ b/app/templates/fight-end-screen.hbs
@@ -1,7 +1,7 @@
 
 <div class="won">
   <h1>You win!</h1>
-  <audio src="../../media-for-game/notimpressed.mp3" autoplay></audio>
+  <audio src="audio/notimpressed.mp3" autoplay></audio>
   <img src="images/kind-of-a-big-deal.jpg" alt="" />
   <button class='btn-default btn-lg restart' type="submit" name="button">Restart</button>
 </div>
