--- a/app/templates/fight-end-screen.hbs
+++ b/app/templates/fight-end-screen.hbs
@@ -3,5 +3,7 @@
   <h1>You win!</h1>
   <audio src="audio/notimpressed.mp3" autoplay></audio>
   <img src="images/kind-of-a-big-deal.jpg" alt="" />
+</div>
+<div class="restart-button">
   <button class='btn-default btn-lg restart' type="submit" name="button">Restart</button>
 </div>
