--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,7 +25,8 @@ body{
   h1{
   font-size: 40px;
   font-weight: bold;
-  font-family: arial;
+  font-family: 'Anton', 'Helvetica', sans-serif;
+  text-transform: uppercase;
   text-align: center;
   color: white;
   }
@@ -46,6 +47,7 @@ body{
   }
 }
 .title-top{
+  font-family: 'Anton', 'Helvetica', sans-serif;
   margin-top: 80px;
 }
 
